Update 35th Infantry Regiment (Cacti) Association.html

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -599,6 +599,8 @@
 			the privileges of membership.  lt is the responsibility of the Member to keep current their 
 			mail/email address. Send changes to the Secretary. Upon submission of this form you agree to the membership 
 			requirements..</p>
+
+			<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">	
 			
 			 
 			
