--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -587,7 +587,10 @@
 
 </p><a href="https://www.paypal.com/paypalme/cacti35thSec?country.x=US&amp;locale.x=en_US">Paypal</a>
             .<p></p>
-<div><button onclick="window.print()">Print this page</button></div>
+<div><button onclick="window.print()">Print this page</button>
+	<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">	
+
+</div>
 
 			
 			<p style="text-align:justify;">The 35th Infantry Regiment Assn reserves the right to request 
@@ -600,7 +603,7 @@
 			mail/email address. Send changes to the Secretary. Upon submission of this form you agree to the membership 
 			requirements..</p>
 
-			<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">	
+			
 			
 			 
 			
