--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -587,9 +587,17 @@
 
 </p><a href="https://www.paypal.com/paypalme/cacti35thSec?country.x=US&amp;locale.x=en_US">Paypal</a>
             .<p></p>
-<div><button onclick="window.print()">Print this page</button></div>         <input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">	
-
-
+<div>
+				<table style="width:100%; margin:auto;">
+				<tbody><tr>
+					<td style="width:80%;text-align:left;">
+						</td>
+					<td style="width:20%;text-align:right;">
+						<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">
+					</td>											
+				</tr>
+				</tbody></table>
+			</div>
 			
 			<p style="text-align:justify;">The 35th Infantry Regiment Assn reserves the right to request 
 			documents/records that verify an applicant's qualifying service time with the 35th Infantry 
