Update 35th Infantry Regiment (Cacti) Association.html

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -333,33 +333,32 @@
 			</tbody></table>
 			<br>
 			<hr>	
-			<p style="text-align:justify;"><span style="color:#000099; font-weight:bold">Reunion Dates:</span> September 11 - September 14, 
-				2024
+			<p style="text-align:justify;"><span style="color:#000099; font-weight:bold">Reunion Dates:</span> September 2 - September 6, 
+				2026
 			</p>
 			<p style="text-align:justify;"><span style="color:#000099; font-weight:bold">Reunion Hotel:				
-				Crowne Plaza Golf Resort</span>,  One North San Marcos Pl, Chandler, AZ 85225. Call 1-877-685-5594 or use 
-				the online  link <a href="https://www.ihg.com/crowneplaza/hotels/us/en/find-hotels/select-roomrate?fromRedirect=true&amp;qSrt=sBR&amp;qIta=99801505&amp;icdv=99801505&amp;qSlH=phxqq&amp;qCiD=07&amp;qCiMy=082025&amp;qCoD=17&amp;qCoMy=082025&amp;qGrpCd=WIQ&amp;qAAR=6CBARC&amp;qRtP=6CBARC&amp;setPMCookies=true&amp;qSHBrC=CP&amp;qDest=One%20San%20Marcos%20Place,%20Chandler,%20AZ,%20US&amp;srb_u=1&amp;qChAge=&amp;qRmFltr=" target="_new">
+				Millinnum Maxwell Hotel</span>, 2025 Rosa Parks Bvld. Call 1-615-259-4343 or use 
+				the online  link <a href="https://res.windsurfercrs.com/ibe/details.aspx?propertyid=13552&nights=1&checkin=9/2/2026&group=35THINFANTRY26&lang=en-us" target="_new">
 				 <span style="font-weight:bold;">here</span></a>.
-				Room rates are $139.00 for a Single/Double. This includes a $9 historic preservation fee. Be sure to ask for the 
-				35th Infantry Regiment Association group (Group code WIQ). This rate does not include 11.7% room tax. A 
-				credit card is required to secure the reservation. Reservations must be made by August 6, 2025. Rooms are
+				Room rates are $129.00 for a Single/Double.  Be sure to ask for the 
+				35th Infantry Regiment Association group (Group code 35THINFANTRY26). This rate does not include 11.7% room tax. A 
+				credit card is required to secure the reservation. Reservations must be made by August 12, 2026. Rooms are
 				limited so make your reservations early. Rates -/+ 3 days of the Reunion based on availability. <span class="bold">
-				When making the reservation the room rate quoted will be $159 which includes a $20 resort fee that will be 
-				waived when you check in</span>.
+				When making the reservation the room rate quoted will be $129 </span>.
 			</p>
 			
 			<p style="text-align:justify;"><span style="color:#000099; font-weight:bold">Questions on hotel registration:
 				</span> Call Don Johnson at 225-247-9321 or email him at cacti.times@gmail.com. For information about 
-				 Chandler, AZ go <a href="https://www.visitchandler.com/" target="_new"><span style="font-weight:bold;">
-				 here</span></a> or call 480-782-3037.
+				 Nashville, TN go <a href="https://www.visitmusiccity.com/" target="_new"><span style="font-weight:bold;">
+				 here</span></a> or call 615-529-4747.
 			</p>
 			
 			<p style="text-align:justify;"><span style="font-weight:bold; color:#000099;">Reunion Registration</span>: In 
 				order to attend 
-				the <span style="font-weight:bold; color:#000099;">2025 Chandler Arizona Reunion</span>, you must be a 
+				the <span style="font-weight:bold; color:#000099;">2026 Nashville TN Reunion</span>, you must be a 
 				member or guest of the 35th Infantry Regiment Association. <span style="color:red;">If you are not a member 
 				or guest of the association, you must select your membership above now </span> and then proceed with the 
-				Reunion Registration. Full payment is due by August 15, 2025. Cancellations will be accepted until September 
+				Reunion Registration. Full payment is due by August 15, 2026. Cancellations will be accepted until September 
 				1, 2025 with full refund. After that a refund will be based on circumstances and a review by the Reunion 
 				Committee.
 			</p>
@@ -386,10 +385,9 @@
 			</tbody></table>
 				
 			<p style="text-align:justify;font-weight:normal;"><span style="color:#000099; font-weight:bold">Reunion 
-				Banquet: </span>Adult and Child Dinner selections may be made below. Adult Dinners include: Wedge 
-				Salad, Applewood Smoked Bacon, Tomato, Bleu Cheese, Champagne Vinaigrette, Chef’s selected starch and 
-				Vegetable, and Artisan Rolls, Butter Dessert New York Cheesecake, Fresh Berries Freshly Brewed Regular, 
-				Decaffeinated Coffee Assorted Hot Teas,
+				Banquet: </span>Dinner selections may be made below. Dinners include: All Dinner Entrée selections include: 
+				House Salad with ranch and vinaigrette , Mac and Cheese, Mashed Potatoes,  Seasonal Roasted Vegetables 
+				And Southern Green Beans No Children’s meals,
 			</p>
 			
 			<p style="text-align:justify;font-weight:normal;">If you have Special Dietary Needs list them here.</p>
@@ -434,8 +432,8 @@
 			
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 				<tbody><tr>
-					<td style="text-align:left; width:40%;">6 ounce California-Cut Steak </td>
-					<td style="text-align:left; width:20%;">Cost $60.00</td>
+					<td style="text-align:left; width:40%;">Smoked Brisket </td>
+					<td style="text-align:left; width:20%;">Cost $65.00</td>
 					<td style="text-align:left; width:20%;">Quantity <input type="text" name="num_meal1" id="num_meal1" value="" size="5" onblur="myFunction()"></td>					
 					<td style="text-align:right;width:12%;">Total $</td>
 					<td style="text-align:right;width:8%;">
@@ -446,8 +444,8 @@
 			
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 				<tbody><tr>
-					<td style="text-align:left; width:40%;">Parmesan Crusted Chicken Breast</td>
-					<td style="text-align:left; width:20%;">Cost $60.00</td>
+					<td style="text-align:left; width:40%;">Lemon Pepper Chicken</td>
+					<td style="text-align:left; width:20%;">Cost $65.00</td>
 					<td style="text-align:left; width:20%;">Quantity <input type="text" name="num_meal2" id="num_meal2" value="" size="5" onblur="myFunction()"></td>
 					<td style="text-align:right;width:12%;">Total $</td>
 					<td style="text-align:right;width:8%;">
@@ -468,18 +466,7 @@
 				</tr>
 			</table>					
 			-->			
-			<table style="width:100%; margin:auto; background-color:#d0ece7;">
-				<tbody><tr>
-					<td style="text-align:left; width:40%;">Child Plate under 12 Chicken Tenders</td>
-					<td style="text-align:left; width:20%;">Cost $25.00</td>
-					<td style="text-align:left; width:20%;">Quantity <input type="text" name="num_plate" id="num_plate" value="" size="5" onblur="myFunction()"></td>							
-					<td style="text-align:right;width:12%;">Total $</td>
-					<td style="text-align:right;width:8%;">
-						<input type="text" name="amount_plate" id="amount_plate" size="5" value="" style="text-align:right;" readonly=""></td>						
-				</tr>
-			</tbody></table>
-			<br>
-			<hr>				
+					
 
 			<p style="text-align:justify;font-weight:normal;"><span style="color:#000099; font-weight:bold">Donations:</span> To 
 				make donations enter an amount next to the name of the donation category. The minimum amount for Scholarship Reserve 
