Add radio button for electronic membership option

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -313,6 +313,7 @@
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 			<tbody><tr>
 				<td style="text-align:left;width:30%;">Cacti Association Membership</td>
+				<input type="radio" name="Electronic Membership Card" value="elect" onclick="myFunction()">
 				<td style="text-align:left;width:35%;">
 					<input type="radio" name="membership" value="elect" onclick="myFunction()" checked="">
 					Electronic Cacti Times @ $10/yr</td>
