--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -313,6 +313,9 @@
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 			<tbody><tr>
 				<td style="text-align:left;width:30%;">Cacti Association Membership</td>
+				<td stlye="text"-align"left;width:35%;">
+					<input type=radio" name="membership" value="elect" onclick="myFunction()">
+					Electronic Membership Card</td>
 				<td style="text-align:left;width:35%;">
 					<input type="radio" name="membership" value="elect" onclick="myFunction()" checked="">
 					Electronic Cacti Times @ $10/yr</td>
