Fix membership options and typos in HTML
Corrected membership options and fixed typos.

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -305,7 +305,8 @@
 	
 			<p style="text-align:justify;">If you are a new or renewing member, check either "Electronic 
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
-			of membership and the total. <span style="color:red;">If you are a member and do not need to renew yet, then skip 
+			of membership and the total. If you want an electronic membership card check here
+				<span style="color:red;">If you are a member and do not need to renew yet, then skip 
 			this step.</span></p>
 
 						
@@ -313,9 +314,6 @@
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 			<tbody><tr>
 				<td style="text-align:left;width:30%;">Cacti Association Membership</td>
-				<td stlye="text"-align"left;width:35%;">
-					<input type=radio" name="membership" value="elect" onclick="myFunction()">
-					Electronic Membership Card</td>
 				<td style="text-align:left;width:35%;">
 					<input type="radio" name="membership" value="elect" onclick="myFunction()" checked="">
 					Electronic Cacti Times @ $10/yr</td>
