--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -306,7 +306,7 @@
 			<p style="text-align:justify;">If you are a new or renewing member, check either "Electronic 
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
 			of membership and the total. 
-			<Strong>If you want an electronic membership card check here></Strong>
+			<b>If you want an electronic membership card check here</b>
              <input type="checkbox" name="Electronic Membership Card">
 							<span style="color:red;">If you are a member and do not need to renew yet, then skip 
 			this step.</span></p>
