Fix HTML structure for membership options section

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -305,8 +305,8 @@
 	
 			<p style="text-align:justify;">If you are a new or renewing member, check either "Electronic 
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
-			of membership and the total.p><br>
-			<strong>If you want an electronic membership card check here</strong>
+			of membership and the total.<br>
+			<p<strong>If you want an electronic membership card check here</strong><p>
              <input type="checkbox" name="Electronic Membership Card">
 							<span style="color:red;">If you are a member and do not need to renew yet, then skip 
 			this step.</span></p>
