Correct HTML structure for membership options
Fix HTML syntax errors in membership options section.

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -303,7 +303,7 @@
 
 			</p> 
 	
-			<p> style="text-align:justify;">If you are a new or renewing member, check either "Electronic 
+			<p If you are a new or renewing member, check either "Electronic 
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
 			of membership and the total.</p>
 			<p
