Increase font size for electronic membership card prompt

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -307,9 +307,9 @@
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
 			of membership and the total.</p>
 			<p
-			<strong style="font-size:24px;">If you want an electronic membership card check here</strong>
-			</p>
-             <input type="checkbox" name="Electronic Membership Card">
+			<strong style="font-size:36px;">If you want an electronic membership card check here</strong>
+			
+             <input type="checkbox" name="Electronic Membership Card"</p>
 							<span style="color:red;">If you are a member and do not need to renew yet, then skip 
 			this step.</span></p>
 
