--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -301,16 +301,16 @@
 				Share        <input type="radio" name="share" value="yes" checked="">&nbsp;&nbsp;
 				Do not Share <input type="radio" name="share" value="no">
 
-			</p> 
+			
 	
-			<p If you are a new or renewing member, check either "Electronic 
+			<p>If you are a new or renewing member, check either "Electronic 
 			Cacti Times" or "Mailed Cacti Times" as a membership option. Then enter the number of years 
 			of membership and the total.</p>
-			<p
+			<p>
 			<strong style="font-size:36px;">If you want an electronic membership card check here</strong>
 			
              <input type="checkbox" name="Electronic Membership Card"</p>
-							<span style="color:red;">If you are a member and do not need to renew yet, then skip 
+						<p><span style="color:red;">If you are a member and do not need to renew yet, then skip 
 			this step.</span></p>
 
 						
