--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -581,7 +581,7 @@
 					<td style="width:80%;text-align:left;">
 						</td>
 					<td style="width:20%;text-align:right;">
-						<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;" disabled="">
+						<input type="Reset" id="submitok" value="Reset" style="color:red;font-size:18px;">
 					</td>											
 				</tr>
 				</tbody></table>
