Adjust membership pricing table layout

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -328,9 +328,9 @@
 			</tbody></table>
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 			<tbody><tr>
-				<td style="text-align:left;width:30%;">Electronic Life Membership @ $300</td>
-				<td style="text-align:left;width:35%;">Electronic 10 Year Membership @ $80</td>
-				<td style="text-align:right;width:50%;"></td>
+				<td style="text-align:left;width:15%;">Electronic Life Membership @ $300</td>
+				<td style="text-align:left;width:15%;">Electronic 10 Year Membership @ $80</td>
+				<td style="text-align:left;width:20%;"></td>
 				<td style="text-align:right;width:30%;">
 					Number of Years <input type="text" size="5" name="mem_years" id="mem_years" onblur="myFunction()" value=""></td>
 				<td style="text-align:right;width:12%;">Total $</td>
