--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -316,22 +316,22 @@
 						
 			<!--MEMBERHSIP ELECTRONIC OR MAILED	-->				
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
-			<tbody><tr>
+			tr>
 				<td style="text-align:left;width:30%;">Cacti Association Membership</td>
 				<td style="text-align:left;width:35%;">
-					<input type="radio" name="membership" value="elect" onclick="myFunction()" checked="">
+					<input type="radio" name="membership" value="elect" onclick="myFunction()">
 					Electronic Cacti Times @ $10/yr</td>
 				<td style="text-align:left;width:35%;">
 					<input type="radio" name="membership" value="mailed" onclick="myFunction()">
 					Mailed Cacti Times @ $20/yr</td>
 			</tr>
-			</tbody></table>
+			</table>
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
-				Electronic Life Membership @ $300</td>
-			<tbody><tr>
+				</td>
+		     <tr>
 				<td style="text-align:left;width:20%;">
 					<input typr='radio" name="membership" value="life" onclick=myFunction()">
-				</td>
+					Electronic Life Membership @ $300</td>
 				<td style="text-align:left;width:20%;">Electronic 10 Year Membership @ $80</td>
 				<td style="text-align:left;width:10%;"></td>
 				<td style="text-align:right;width:30%;">
