--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -329,9 +329,7 @@
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 				</td>
 		     <tr>
-				<td style="text-align:left;width:20%;">
-					<input typr='radio" name="membership" value="life" onclick=myFunction()">
-					Electronic Life Membership @ $300</td>
+				<td style="text-align:left;width:20%;">	Electronic Life Membership @ $300</td>					
 				<td style="text-align:left;width:20%;">Electronic 10 Year Membership @ $80</td>
 				<td style="text-align:left;width:10%;"></td>
 				<td style="text-align:right;width:30%;">
