--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -328,8 +328,9 @@
 			</table>
 			<table style="width:100%; margin:auto; background-color:#d0ece7;">
 				</td>
-		     <tr>
-				<td style="text-align:left;width:20%;">	Electronic Life Membership @ $300</td>					
+		    	<td style="text-align:left;width:20%;">	
+					<input type="radio" name="membership" value="Life" onclick="myFunction">
+					Electronic Life Membership @ $300</td>					
 				<td style="text-align:left;width:20%;">Electronic 10 Year Membership @ $80</td>
 				<td style="text-align:left;width:10%;"></td>
 				<td style="text-align:right;width:30%;">
