Update 35th Infantry Regiment (Cacti) Association.html

--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -331,7 +331,9 @@
 		    	<td style="text-align:left;width:20%;">	
 					<input type="radio" name="membership" value="Life" onclick="myFunction">
 					Electronic Life Membership @ $300</td>					
-				<td style="text-align:left;width:20%;">Electronic 10 Year Membership @ $80</td>
+				<td style="text-align:left;width:20%;">
+					<input type="radio" name="membership" value="10year" onclick="myFunction">
+					Electronic 10 Year Membership @ $80</td>
 				<td style="text-align:left;width:10%;"></td>
 				<td style="text-align:right;width:30%;">
 					Number of Years <input type="text" size="5" name="mem_years" id="mem_years" onblur="myFunction()" value=""></td>
