--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -620,7 +620,7 @@ function myFunction() {
     if (txt2 == "elect#") {total = years * 10;}
 	else if(txt2=="mailed#") {total = years * 20;}
 	else if(txt2=="Life#") {total = "300";}
-	else if(txt2=="10year#") {total = 80;}
+	else if(txt2=="10year#") {total = "80";}
 	document.getElementById("mem_amount").value = total.toFixed(2);
  
 	var num2 = document.getElementById("num_members").value;			
