--- a/35th Infantry Regiment (Cacti) Association.html
+++ b/35th Infantry Regiment (Cacti) Association.html
@@ -618,8 +618,8 @@ function myFunction() {
 	if(txt.substring(0,4) == "yes#") {txt2 = txt.substring(4);} else {txt2 = txt.substring(3); }
 	
    if (txt2 == "elect#") {total = years * 10;} 
-   else if (txt2 == "mailed"){total = years * 20;}
-	else (txt2 == "Life") (total = "300";}
+   else if (txt2 == "mailed#"){total = years * 20;}
+	else if (txt2 == "Life#") (total = "300";}
 	document.getElementById("mem_amount").value = total.toFixed(2);
  
 	var num2 = document.getElementById("num_members").value;			
